added phone and email inks

--- a/public/index.html
+++ b/public/index.html
@@ -31,16 +31,17 @@
                 </div>
                 <a href="#!user"><img class="circle" src="https://avatars3.githubusercontent.com/u/13579410?v=4&s=400&u=0608479edd1543521cafb0578ec4d95a6a087a03"></a>
                 <a href="#!name"><span class="white-text name">Wes Bubeck</span></a>
-                <a href="#!email"><span class="white-text email">wesbubeck20@gmail.com</span></a>
+                <a href="mailto:wesbubeck20@gmail.com"><span class="white-text email">wesbubeck20@gmail.com</span></a>
               </div>
             </li>
-            <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-            <li><a href="#!">Second Link</a></li>
+            <li><a href="https://github.com/WTB20" class="waves-effect"> GitHub</li></a>
+            <li><a href="https://github.com/WTB20" class="waves-effect"> LinkedIn</li></a>
             <li>
               <div class="divider"></div>
             </li>
-            <li><a class="subheader">Subheader</a></li>
-            <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+            <li><a class="subheader">Contact</a></li>
+            <li><a class="waves-effect" href="mailto:wesbubeck20@gmail.com">Email Me</a></li>
+            <li><a class="waves-effect" href="tel:9199489480">Call Me</a></li>
           </ul>
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-purple">menu</i></a>
           <h3 class="center-align animated fadeInLeftBig">Wes Bubeck</h3>
@@ -98,7 +99,7 @@
               <h5 class="light right-align white-text">Email |</h5>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align white-text">wesbubeck20@gmail.com</h5>
+              <a href="mailto:wesbubeck20@gmail.com"><h5 class="left-align white-text">wesbubeck20@gmail.com</h5></a>
             </div>
           </div>
           <div class="row">
@@ -106,7 +107,7 @@
               <h5 class="light right-align white-text">Phone Number |</h5>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align white-text">919.948.9480</h5>
+              <a href="tel:919489480"><h5 class="left-align white-text">919.948.9480</h5></a>
             </div>
           </div>
         </div>
