--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
                 <a href="mailto:wesbubeck20@gmail.com"><span class="white-text email">wesbubeck20@gmail.com</span></a>
               </div>
             </li>
-            <li><a href="https://github.com/WTB20" class="waves-effect"> GitHub</li></a>
-            <li><a href="https://github.com/WTB20" class="waves-effect"> LinkedIn</li></a>
+            <li><a href="https://github.com/WTB20" target="_blank" class="waves-effect"> GitHub</li></a>
+            <li><a href="https://www.linkedin.com/in/wesbubeck/" target="_blank" class="waves-effect"> LinkedIn</li></a>
             <li>
               <div class="divider"></div>
             </li>
