--- a/public/index.html
+++ b/public/index.html
@@ -72,43 +72,47 @@
           <br><br>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align white-text">Name |</h5>
+              <h6 class="light right-align white-text">Name |</h6>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align white-text">Wes Bubeck</h5>
+              <h6 class="left-align white-text">Wes Bubeck</h6>
             </div>
           </div>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align white-text">Title |</h5>
+              <h6 class="light right-align white-text">Title |</h6>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align white-text">Full Stack Web Developer</h5>
+              <h6 class="left-align white-text">Full Stack Web Developer</h6>
             </div>
           </div>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align white-text">Location |</h5>
+              <h6 class="light right-align white-text">Location |</h6>
             </div>
             <div class="col s12 m6">
-              <h5 class="left-align white-text">Raleigh, NC</h5>
+              <h6 class="left-align white-text">Raleigh, NC</h6>
             </div>
           </div>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align white-text">Email |</h5>
+              <h6 class="light right-align white-text">Email |</h6>
             </div>
             <div class="col s12 m6">
-              <a href="mailto:wesbubeck20@gmail.com"><h5 class="left-align white-text">wesbubeck20@gmail.com</h5></a>
+              <a href="mailto:wesbubeck20@gmail.com"><h6 class="left-align white-text">wesbubeck20@gmail.com</h6></a>
             </div>
           </div>
           <div class="row">
             <div class="col m6 hide-on-small-only">
-              <h5 class="light right-align white-text">Phone Number |</h5>
+              <h6 class="light right-align white-text">Phone Number |</h6>
             </div>
             <div class="col s12 m6">
-              <a href="tel:919489480"><h5 class="left-align white-text">919.948.9480</h5></a>
+              <a href="tel:919489480"><h6 class="left-align white-text">919.948.9480</h6></a>
             </div>
+            <br><br>
+            <div class="divider"></div>
+            <div><h5 class="white-text">Bio</h5></div>
+            <div><p class="white-text">I am Software Development Engineer who loves programming in JavaScript, React, Node.js, , MongoDB, MySQL, HTML, CSS, BootStrap, Alexa Skills and much more. Software Development is not just my career it is my passion. I love the process of having a problem, the tension of working through it with your team, and the overwhelming feeling of satisfaction of successfully fixing that problem and over-delivering on a product that will positively impact a client, a business, and/or society. A quote I read that well describes how I feel about programming is “I know they say if you love what you do, you'll never work a day in your life. Well I don't buy that! I think if you love what you do, you're going to work all day, everyday, harder than everyone else”. I find joy learning new technologies and both professionally and personally growing. In 2014 I took a job as the VP of business Development to launch a startup in Raleigh, NC for Monster Tree Service. After the first year of the launch our team received the “Rookie of the Year” award which is an award given to the top performing new location in the country. Interested keeping our success I took the lead on our strategy which included web development, branding, and social media strategy. In fiscal year 2015 our location increased revenue by 70% and carried the highest “Rate Per Man-Hour” in the country. In 2016 we retained the highest “Rate Per Man-Hour” and grew our revenue to the 3rd highest location in the country. In 2017 to try to increase productivity I began to develop Software that would allow our industry to streamline the communication between the office and our crews that were working in the field through a Mobile Web App. The software allows our Project Managers to live update both schedules and job data that is accessible by crew through their phones on site. The crew is also able to update data from the job and mark progress that can be accessed by Project Managers and all data is stored in a searchable database. I was the lead developer on this project and also was in charge of the onboarding. I value the importance culture and take great pride in being the type teammate that positively impacts the team around.</p></div>
           </div>
         </div>
         <br>
