added about me to side bar

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
                   <li><a class="subheader">Contact</a></li>
                   <li><a class="waves-effect" href="mailto:wesbubeck20@gmail.com">Email Me</a></li>
                   <li><a class="waves-effect" href="tel:9199489480">Call Me</a></li>
+                   <li><a class="waves-effect modal-trigger" href="#modal1">About Me</a></li>
             </ul>
             <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-purple">menu</i></a>
             <h3 class="center-align animated fadeInLeftBig">Wes Bubeck</h3>
