added a sub header

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
                   <a href="mailto:wesbubeck20@gmail.com"><span class="white-text email">wesbubeck20@gmail.com</span></a>
                 </div>
               </li>
+              <li><a class="subheader">Links</a></li>
               <li><a href="https://github.com/WTB20" target="_blank" class="waves-effect"> GitHub</li></a>
                 <li><a href="https://www.linkedin.com/in/wesbubeck/" target="_blank" class="waves-effect"> LinkedIn</li></a>
                   <li>
