--- a/public/index.html
+++ b/public/index.html
@@ -178,6 +178,20 @@
               <div class="col s12 center">
                 <h3><i class="mdi-content-send brown-text"></i></h3>
                 <h4 class="white-text">Portfolio</h4>
+                <div class="card-content">
+                  <div class="card-heading">
+                    <div class="card-title">
+                      <span>My Family Message Board</span>
+                      <span class="bar">&nbsp;|&nbsp;</span>
+                      <small>Lead Developer</small>
+                    </div>
+                    <div class="card-date">2017</div>
+                  </div>
+                  <ul class="card-badges">
+                    <li>Open Source</li>
+                    <li>Application</li>
+                  </ul>
+                </div>
                 <p class="left-align light white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
                   tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper
                   a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus.
