building the project layout

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                   <li><a class="subheader">Contact</a></li>
                   <li><a class="waves-effect" href="mailto:wesbubeck20@gmail.com">Email Me</a></li>
                   <li><a class="waves-effect" href="tel:9199489480">Call Me</a></li>
-                   <li><a class="waves-effect modal-trigger" href="#modal1">About Me</a></li>
+                  <li><a class="waves-effect modal-trigger" href="#modal1">About Me</a></li>
             </ul>
             <a href="#" data-activates="slide-out" class="button-collapse"><i class="medium material-icons icon-purple">menu</i></a>
             <h3 class="center-align animated fadeInLeftBig">Wes Bubeck</h3>
@@ -126,27 +126,27 @@
                   <div class="modal-content">
                     <h4 class="bio-title">About Me</h4>
                     <p>I am Software Development Engineer who loves programming in JavaScript, React, Node.js, , MongoDB, MySQL,
-                    HTML, CSS, BootStrap, Alexa Skills and much more. Software Development is not just my career it is my
-                    passion. I love the process of having a problem, the tension of working through it with your team, and
-                    the overwhelming feeling of satisfaction of successfully fixing that problem and over-delivering on a
-                    product that will positively impact a client, a business, and/or society. A quote I read that well describes
-                    how I feel about programming is “I know they say if you love what you do, you'll never work a day in
-                    your life. Well I don't buy that! I think if you love what you do, you're going to work all day, everyday,
-                    harder than everyone else”. I find joy learning new technologies and both professionally and personally
-                    growing. In 2014 I took a job as the VP of business Development to launch a startup in Raleigh, NC for
-                    Monster Tree Service. After the first year of the launch our team received the “Rookie of the Year” award
-                    which is an award given to the top performing new location in the country. Interested keeping our success
-                    I took the lead on our strategy which included web development, branding, and social media strategy.
-                    In fiscal year 2015 our location increased revenue by 70% and carried the highest “Rate Per Man-Hour”
-                    in the country. In 2016 we retained the highest “Rate Per Man-Hour” and grew our revenue to the 3rd highest
-                    location in the country. In 2017 to try to increase productivity I began to develop Software that would
-                    allow our industry to streamline the communication between the office and our crews that were working
-                    in the field through a Mobile Web App. The software allows our Project Managers to live update both schedules
-                    and job data that is accessible by crew through their phones on site. The crew is also able to update
-                    data from the job and mark progress that can be accessed by Project Managers and all data is stored in
-                    a searchable database. I was the lead developer on this project and also was in charge of the onboarding.
-                    I value the importance culture and take great pride in being the type teammate that positively impacts
-                    the team around.</p>
+                      HTML, CSS, BootStrap, Alexa Skills and much more. Software Development is not just my career it is
+                      my passion. I love the process of having a problem, the tension of working through it with your team,
+                      and the overwhelming feeling of satisfaction of successfully fixing that problem and over-delivering
+                      on a product that will positively impact a client, a business, and/or society. A quote I read that
+                      well describes how I feel about programming is “I know they say if you love what you do, you'll never
+                      work a day in your life. Well I don't buy that! I think if you love what you do, you're going to work
+                      all day, everyday, harder than everyone else”. I find joy learning new technologies and both professionally
+                      and personally growing. In 2014 I took a job as the VP of business Development to launch a startup
+                      in Raleigh, NC for Monster Tree Service. After the first year of the launch our team received the “Rookie
+                      of the Year” award which is an award given to the top performing new location in the country. Interested
+                      keeping our success I took the lead on our strategy which included web development, branding, and social
+                      media strategy. In fiscal year 2015 our location increased revenue by 70% and carried the highest “Rate
+                      Per Man-Hour” in the country. In 2016 we retained the highest “Rate Per Man-Hour” and grew our revenue
+                      to the 3rd highest location in the country. In 2017 to try to increase productivity I began to develop
+                      Software that would allow our industry to streamline the communication between the office and our crews
+                      that were working in the field through a Mobile Web App. The software allows our Project Managers to
+                      live update both schedules and job data that is accessible by crew through their phones on site. The
+                      crew is also able to update data from the job and mark progress that can be accessed by Project Managers
+                      and all data is stored in a searchable database. I was the lead developer on this project and also
+                      was in charge of the onboarding. I value the importance culture and take great pride in being the type
+                      teammate that positively impacts the team around.</p>
                   </div>
                   <div class="modal-footer">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
@@ -178,7 +178,35 @@
               <div class="col s12 center">
                 <h3><i class="mdi-content-send brown-text"></i></h3>
                 <h4 class="white-text">Portfolio</h4>
-                <div class="card-content">
+                <div class="row">
+                  <div class="col s12 m6">
+                    <div class="card blue-grey darken-1">
+                      <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                          I require little markup to use effectively.</p>
+                      </div>
+                      <div class="card-action">
+                        <a href="#">This is a link</a>
+                        <a href="#">This is a link</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col s12 m6">
+                    <div class="card blue-grey darken-1">
+                      <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                          I require little markup to use effectively.</p>
+                      </div>
+                      <div class="card-action">
+                        <a href="#">This is a link</a>
+                        <a href="#">This is a link</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!--<div class="card-content">
                   <div class="card-heading">
                     <div class="card-title">
                       <span>My Family Message Board</span>
@@ -191,7 +219,7 @@
                     <li>Open Source</li>
                     <li>Application</li>
                   </ul>
-                </div>
+                </div>-->
                 <p class="left-align light white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque
                   tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper
                   a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus.
