adding links and modals

--- a/public/index.html
+++ b/public/index.html
@@ -182,6 +182,35 @@
                   <div class="col s12 m6">
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
+                        <span class="card-title">Crypto-News</span>
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                          I require little markup to use effectively.</p>
+                      </div>
+                      <div class="card-action">
+                        <a href="#modal1">About</a>
+                        <a href="https://github.com/WTB20/cryptoNewsScraper" target="_blank">Repo</a>
+                        <a href="https://immense-lake-89071.herokuapp.com/" target="_blank">App</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col s12 m6">
+                    <div class="card blue-grey darken-1">
+                      <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                          I require little markup to use effectively.</p>
+                      </div>
+                      <div class="card-action">
+                        <a href="#">This is a link</a>
+                        <a href="#">This is a link</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s12 m6">
+                    <div class="card blue-grey darken-1">
+                      <div class="card-content white-text">
                         <span class="card-title">Card Title</span>
                         <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
                           I require little markup to use effectively.</p>
@@ -206,7 +235,7 @@
                     </div>
                   </div>
                 </div>
-                                <div class="row">
+                <div class="row">
                   <div class="col s12 m6">
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
@@ -234,32 +263,14 @@
                     </div>
                   </div>
                 </div>
-                                <div class="row">
-                  <div class="col s12 m6">
-                    <div class="card blue-grey darken-1">
-                      <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
-                          I require little markup to use effectively.</p>
-                      </div>
-                      <div class="card-action">
-                        <a href="#">This is a link</a>
-                        <a href="#">This is a link</a>
-                      </div>
-                    </div>
+                <!--Modals for cards-->
+                <div id="modal1" class="modal">
+                  <div class="modal-content">
+                    <h4>Modal Header</h4>
+                    <p>A bunch of text</p>
                   </div>
-                  <div class="col s12 m6">
-                    <div class="card blue-grey darken-1">
-                      <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
-                          I require little markup to use effectively.</p>
-                      </div>
-                      <div class="card-action">
-                        <a href="#">This is a link</a>
-                        <a href="#">This is a link</a>
-                      </div>
-                    </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
                   </div>
                 </div>
                 <!--<div class="card-content">
