added the crypto project

--- a/public/index.html
+++ b/public/index.html
@@ -183,11 +183,10 @@
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
                         <span class="card-title">Crypto-News</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
-                          I require little markup to use effectively.</p>
+                        <img class="imgProjects" src="ProjectImages/CryptoNews.png" alt="Crypt News">
                       </div>
                       <div class="card-action">
-                        <a href="#modal1">About</a>
+                        <a href="#modalCrypto" class="modal-trigger">About</a>
                         <a href="https://github.com/WTB20/cryptoNewsScraper" target="_blank">Repo</a>
                         <a href="https://immense-lake-89071.herokuapp.com/" target="_blank">App</a>
                       </div>
@@ -264,10 +263,19 @@
                   </div>
                 </div>
                 <!--Modals for cards-->
-                <div id="modal1" class="modal">
+                <!--Crypto-News-->
+                <div id="modalCrypto" class="modal">
                   <div class="modal-content">
-                    <h4>Modal Header</h4>
-                    <p>A bunch of text</p>
+                    <h4>Crypto Currency News Scraper</h4>
+                    <p>Like so many other people I am enthralled with Crypto Currencies and Block Chain,
+                      but I never have time to finish an article so I built a news scraper the will go to 
+                      crypto and blockchain news sites and return the top new article. It will display the 
+                      title, summary and a link to the article. Then you have the ability to save the article 
+                      where they. Will be stored in a database and will be rendered when your return to the page.
+                      Saved articles can either be deleted or you can click notes, which will open a modal 
+                      where you can write notes about the article that will also be stored in the database
+                    </p>
+                    <p class="center-align light">Java Script |  Node.js | Mongoose | NPM | GitHub | Express | HTML 5 | Visual Code Studio | CSS 3 | MongoDB | Materialize </p>
                   </div>
                   <div class="modal-footer">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
