changes to family project

--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
                         <span class="card-title">Family Board</span>
-                        <img class="imgProjects" src="ProjectImages/FamilyBoard.png" alt="Crypt News">
+                        <img class="imgProjects" src="ProjectImages/familyBoard.png" alt="Family Message Board">
                       </div>
                       <div class="card-action">
                         <a href="#modalFamily" class="modal-trigger">About</a>
@@ -284,13 +284,12 @@
                   <div id="modalFamily" class="modal">
                     <div class="modal-content">
                       <h4>My Family Message Board</h4>
-                      <p>My family all uses different types of Social Media and some rarely
-                        go on. So I created a fun little app that allows my family. To create an identity
-                        as an Author. Then create messages that are stored in a database and
-                         can be deleted and updated.
+                      <p>My family all uses different types of Social Media and some rarely go on. So I created a fun little
+                        app that allows my family. To create an identity as an Author. Then create messages that are stored
+                        in a database and can be deleted and updated.
                       </p>
-                      <p class="center-align light">Java Script | Node.js | Sequelize | NPM | GitHub | Express | HTML 5 | Visual Code Studio | CSS 3 | MySQL
-                        | Materialize | Passport </p>
+                      <p class="center-align light">Java Script | Node.js | Sequelize | NPM | GitHub | Express | HTML 5 | Visual Code Studio | CSS 3 |
+                        MySQL | Materialize | Passport </p>
                     </div>
                     <div class="modal-footer">
                       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
