fixed a div that was workingproperly with parralex

--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,8 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h4 class="header col s12 light">Adding brief statement about me</h4>
+              <h4 class="header col s12 light">Fall in love with the process and the results will come!</h4>
+              <h4 class="header col s12 light">and the results will come!</h4>
             </div>
           </div>
         </div>
@@ -204,6 +205,7 @@
                         <a href="https://blooming-peak-16225.herokuapp.com/blog" target="_blank">App</a>
                       </div>
                     </div>
+                  </div>
                   </div>
                   <div class="row">
                     <div class="col s12 m6">
