added recipe project

--- a/public/index.html
+++ b/public/index.html
@@ -208,10 +208,10 @@
                   </div>
                 </div>
                 <div class="row">
-              <div class="col s12 m6">
+                  <div class="col s12 m6">
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
-                           <span class="card-title">Friend Finder</span>
+                        <span class="card-title">Friend Finder</span>
                         <img class="imgProjects" src="ProjectImages/friendFinder.png" alt="Crypt News">
                       </div>
                       <div class="card-action">
@@ -224,13 +224,13 @@
                   <div class="col s12 m6">
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
-                          I require little markup to use effectively.</p>
+                        <span class="card-title">Heather's Recipe</span>
+                        <img class="imgProjects" src="ProjectImages/friendFinder.png" alt="Crypt News">
                       </div>
                       <div class="card-action">
-                        <a href="#">This is a link</a>
-                        <a href="#">This is a link</a>
+                        <a href="#modalRecipe" class="modal-trigger">About</a>
+                        <a href="https://github.com/WTB20/heathersRecipes" target="_blank">Repo</a>
+                        <a href="https://salty-atoll-38218.herokuapp.com/" target="_blank">App</a>
                       </div>
                     </div>
                   </div>
@@ -297,15 +297,30 @@
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
                   </div>
                 </div>
-                                <!--Modal Family Board-->
+                <!--Modal Friend Finder-->
                 <div id="modalFriend" class="modal">
                   <div class="modal-content">
                     <h4>Simpson Friend Finder</h4>
-                    <p>This sweet little app will ask you a series of personality questions and based on your personality
-                      the app will tell you what cast member of The Simpsons would be your bestie!
+                    <p>This sweet little app will ask you a series of personality questions and based on your personality the
+                      app will tell you what cast member of The Simpsons would be your bestie!
                     </p>
-                    <p class="center-align light">Java Script | Node.js | NPM | GitHub | Express | HTML 5 | Visual Code Studio | CSS 3 
-                      | Bootstrap </p>
+                    <p class="center-align light">Java Script | Node.js | NPM | GitHub | Express | HTML 5 | Visual Code Studio | CSS 3 | Bootstrap </p>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+                  </div>
+                </div>
+                <!--Modal Friend Finder-->
+                <div id="modalRecipe" class="modal">
+                  <div class="modal-content">
+                    <h4>Heather's Recipe Finder</h4>
+                    <p>My wife loves to cook, but can never remember what site she used the last time she found a recipe that she 
+                      really liked. So I built an App, customed designed for her, where she can search a database of recipes. The App
+                      is built in React and uses an API that will search for recipes based on the users input. It will display a title,
+                      picture, description and a link to the source of the recipe.
+                    </p>
+                    <p class="center-align light">Java Script | ES6 | Node.js | React | NPM | GitHub | Express | HTML 5 | Visual Code Studio
+              | CSS 3 | Bootstrap </p>
                   </div>
                   <div class="modal-footer">
                     <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
