--- a/public/index.html
+++ b/public/index.html
@@ -315,7 +315,7 @@
                   <div class="modal-content">
                     <h4>Heather's Recipe Finder</h4>
                     <p>My wife loves to cook, but can never remember what site she used the last time she found a recipe that she 
-                      really liked. So I built an App, customed designed for her, where she can search a database of recipes. The App
+                      really liked. So I built an App, custom designed for her, where she can search a database of recipes. The App
                       is built in React and uses an API that will search for recipes based on the users input. It will display a title,
                       picture, description and a link to the source of the recipe.
                     </p>
