spelling errors and image link

--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h4 class="header col s12 light">Fall in love with the process and the results will come!</h4>
+              <h4 class="header col s12 light">Fall in love with the process</h4>
               <h4 class="header col s12 light">and the results will come!</h4>
             </div>
           </div>
@@ -225,7 +225,7 @@
                     <div class="card blue-grey darken-1">
                       <div class="card-content white-text">
                         <span class="card-title">Heather's Recipe</span>
-                        <img class="imgProjects" src="ProjectImages/friendFinder.png" alt="Crypt News">
+                        <img class="imgProjects" src="ProjectImages/recipe.png" alt="Crypt News">
                       </div>
                       <div class="card-action">
                         <a href="#modalRecipe" class="modal-trigger">About</a>
